# mavproxy_ros

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  index.html  package.xml  pyproject.toml  readme.md  setup.py
.github/workflows/: pre-commit.yml
config/: apm.pdef.xml  control.yml  other.yml  param.yml  pland.yml
launch/: onclick_run.launch  onclick_run_dog_real.launch  onclick_run_dog_sim.launch  onclick_run_drone_real.launch  onclick_run_drone_sim.launch
mavproxy_ros/: camera.py  control_model.py  ctrl_node.py  message_handler.py  node.py  pid_controller.py  ui.py  utils.py
mavproxy_ros/controller/: __init__.py  base_controller.py  controller_utils.py  dog_controller.py  dog_utils.py  drone_controller.py
scripts/: connection.py  control.py  control_model.py  control_new.py  dummy_q25.py  dummy_service.py  key_contrl.py  other.py  param.py  pland.py  ui.py  utils.py
scripts/base/: camera.py  ctrl_node.py  node.py  pid_controller.py  utils.py
scripts/base/controller/: base_controller.py  dog_controller.py  drone_controller.py
sh/: convert.py  debug1.py  debug2.py  run_sim.sh
src/: test.cpp
srv/: Register.srv
static/: index.html  map.html  pip-video.js  record.html
static/assets/: index-3APzzgao.js  index-BEBfzpbg.js  index-BNXCsHNs.js  index-BR-BqOad.js  index-BSSEBeM-.css  index-BXaJk3Ue.js  index-BZOd_qPw.css  index-Bf4gYLLP.js  index-BuRkFTFL.js  index-C8phL3q8.js  index-CCNGzoO7.js  index-CTyjmt1Q.js  index-CW-vD4_6.js  index-CZ4E7gMZ.css  index-Cj7HWvJY.js  index-CsFG2Z4Z.js  index-Cvy_7h9M.js  index-Cx9Tmxzh.js  index-D6Pse2dl.js  index-DOBqmhWZ.js  index-DX1WXyPY.js  index-Da0vWhDf.js  index-DuhYy5wB.js  index-XvS7CCqN.css  index-gzSNBxwd.css  index-q_nElGX2.js  index-vwyxBLuE.js  index-z0_xjDst.js  index-zuCDsGuv.js
